# conan

./: .codeclimate.yml  .codecov.yml  .coveragerc  .editorconfig  .gitignore  .noseids  .pycodestyle  .travis.yml  Dockerfile  LICENSE.md  MANIFEST.in  README.md  README.rst  StarPattern  and not tool_requires -        raise ConanException(Please specify at least a path to a conanfile or a valid reference.)[B[B  appveyor.yml  bump_dev_version.py  conanfile.py  contributors.txt  deactivate_test.sh  file.html  graph.html  latest  less.exe.stackdump  myoutput.txt  mytrace.txt  output.txt  patch  poco.json  pyinstaller.py  pylint.cnf  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_server.txt  setup.cfg  setup.py  setup_server.py  table.html  (+1 more)
.ci/: bump_dev_version.py
.ci/appveyor/: after.bat  install.bat  test.bat
.ci/docker/: conan-tests
.ci/jenkins/: Jenkinsfile  conf.py  excluded_tags.py  gh_pr_reader.py  launch.py  pr_tags.py  runner.py  testsv2.jenkins
.ci/travis/: install.sh  run.sh
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PR_INCREASE_TESTING.md  PULL_REQUEST_TEMPLATE.md  stale.yml
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  feature_request.md  feature_request.yml  question.md  question.yml  service.md  (+1 more)
build_info/: command.py  conan_build_info.py
ci/: Dockerfile  conan-tests  conan-unittests
conan/: __init__.py  errors.py
conans/: __init__.py  conan.py  conan_server.py  constants.py  errors.py  info.py  migrations.py  operations.py  paths.py  pylint_plugin.py  requirements.txt  requirements_dev.txt  requirements_dev_pip3.txt  requirements_linux.txt  requirements_osx.txt  requirements_runner.txt  requirements_server.txt  search.py  tools.py  tools_factory.py  unicode.py
conans/test/functional/generators/assets/cmake_find_package_multi/hello/src/: CMakeLists.txt
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
examples/: parallel_pb.py  parallel_progress_bar.py
kk/: conanfile.py
meson-test/: build
src/: CMakeLists.txt  pkg.cpp  pkg.h
test/: README.md  conftest.py  conftest_user.py
test_package/: CMakeLists.txt  conanfile.py  example.cpp
(+3471 files in other folders)
